Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10337

Open by handle does not work with unlinked files from multiple nodes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • None
    • None
    • 3
    • 9223372036854775807

      When doing open by handle, a requirement is that it be possible to open already open unlinked files. This is important for the sort of userspace NFS server/ i/o forwarder (DVS) uses that file handles are intended for.

      This works from one node in Lustre, but not across multiple nodes. This looks fixable - It's possible to open an orphaned file, it seems to be as simple as using the code from mdd_close in mdd_open, particularly rewriting the "EEXIST check" (mdd_is_dead_obj) to check if the object is an orphan and then open it anyway.

      Patch forthcoming.

            paf Patrick Farrell (Inactive)
            paf Patrick Farrell (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: