lustre/tests/sanity.sh
@@ -15602,18 +15602,6 @@ test_236() {
 }
 run_test 236 "Layout swap on open unlinked file"
 
-# test to verify file handle related system calls
-# (name_to_handle_at/open_by_handle_at)
-# The new system calls are supported in glibc >= 2.14.
-
-test_237() {
-	echo "Test file_handle syscalls" > $DIR/$tfile ||
-		error "write failed"
-	check_fhandle_syscalls $DIR/$tfile ||
-		error "check_fhandle_syscalls failed"
-}
-run_test 237 "Verify name_to_handle_at/open_by_handle_at syscalls"
-
 # LU-4659 linkea consistency
 test_238() {
 	local server_version=$(lustre_version_code $SINGLEMDS)
